Reactive update: refactored services and controllers, added repositories and test structure